--- a/TravelTide.ipynb
+++ b/TravelTide.ipynb
@@ -79,7 +79,7 @@
     "import plotly.express as px\n",
     "\n",
     "# custom functions \n",
-    "import Support.dbSupport as dbs\n",
+    "import Support.db_Support as dbs\n",
     "import Support.calSupport as cs"
    ]
   },
