--- a/TravelTide.ipynb
+++ b/TravelTide.ipynb
@@ -57,12 +57,14 @@
     "\n",
     "## Packages need to be installed\n",
     "- pip install scikit-learn\n",
+    "-  pip install ipywidgets\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "0bb02658-449b-444d-ae70-765220dc2e1b",
    "metadata": {},
    "outputs": [],
@@ -79,8 +81,8 @@
     "import plotly.express as px\n",
     "\n",
     "# custom functions \n",
-    "import Support.db_Support as dbs\n",
-    "import Support.calSupport as cs"
+    "import Support.db_support as dbs\n",
+    "import Support.cus_support as cus"
    ]
   },
   {
@@ -694,14 +696,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Age: 41.94648216072024\n",
+      "Average Age: 41.948816272090696\n",
       "Median Age: 42.0\n",
       "Age Group Distribution:\n",
       "age_group\n",
       "35-44    33.727909\n",
-      "45-54    29.476492\n",
+      "45-54    29.459820\n",
       "25-34    14.938313\n",
-      "55-64     8.202734\n",
+      "55-64     8.219406\n",
       "18-24     7.985995\n",
       "65+       4.318106\n",
       "<18       1.350450\n",
@@ -1046,7 +1048,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>41.946482</td>\n",
+       "      <td>41.948816</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -1070,7 +1072,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>12.047678</td>\n",
+       "      <td>12.048380</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
@@ -1229,8 +1231,8 @@
        "unique       105          NaN         7            152  ...   \n",
        "top     new york          NaN     35-44     2023-07-20  ...   \n",
        "freq         680          NaN      2023            148  ...   \n",
-       "mean         NaN    41.946482       NaN            NaN  ...   \n",
-       "std          NaN    12.047678       NaN            NaN  ...   \n",
+       "mean         NaN    41.948816       NaN            NaN  ...   \n",
+       "std          NaN    12.048380       NaN            NaN  ...   \n",
        "min          NaN    17.000000       NaN            NaN  ...   \n",
        "25%          NaN    35.000000       NaN            NaN  ...   \n",
        "50%          NaN    42.000000       NaN            NaN  ...   \n",
@@ -1336,7 +1338,7 @@
       "hotel_hunter_index_scaled           -0.252286\n",
       "total_hotel_usd_spent_scaled        -0.792095\n",
       "total_flight_usd_spent_scaled       -0.808573\n",
-      "age_scaled                          -0.230566\n",
+      "age_scaled                          -0.230487\n",
       "dtype: float64\n",
       "--------------------------------------------------\n",
       "Cluster 1\n",
@@ -1356,7 +1358,7 @@
       "hotel_hunter_index_scaled            0.739911\n",
       "total_hotel_usd_spent_scaled         0.239770\n",
       "total_flight_usd_spent_scaled        0.268687\n",
-      "age_scaled                           0.051254\n",
+      "age_scaled                           0.051206\n",
       "dtype: float64\n",
       "--------------------------------------------------\n",
       "Cluster 2\n",
@@ -1376,7 +1378,7 @@
       "hotel_hunter_index_scaled           -0.443679\n",
       "total_hotel_usd_spent_scaled         0.421172\n",
       "total_flight_usd_spent_scaled        0.081453\n",
-      "age_scaled                           0.077564\n",
+      "age_scaled                           0.077598\n",
       "dtype: float64\n",
       "--------------------------------------------------\n",
       "Cluster 3\n",
@@ -1396,7 +1398,7 @@
       "hotel_hunter_index_scaled           -0.164264\n",
       "total_hotel_usd_spent_scaled        -0.663180\n",
       "total_flight_usd_spent_scaled        0.298383\n",
-      "age_scaled                          -0.075894\n",
+      "age_scaled                          -0.075719\n",
       "dtype: float64\n",
       "--------------------------------------------------\n",
       "Cluster 4\n",
@@ -1416,10 +1418,24 @@
       "hotel_hunter_index_scaled           -0.101987\n",
       "total_hotel_usd_spent_scaled         0.065035\n",
       "total_flight_usd_spent_scaled       -0.026616\n",
-      "age_scaled                           0.054212\n",
+      "age_scaled                           0.054015\n",
       "dtype: float64\n",
       "--------------------------------------------------\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29ad8c3ebdf844d0b5a069d6a1c7239d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(Output(), Output(), Output(), Output(), Output()), selected_index=0, titles=('Cluster 0', 'Clust…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1458,6 +1474,7 @@
     "    print(df[df['cluster'] == cluster][scaled_columns].mean())\n",
     "    #visual separator -----\n",
     "    print('-'*50)\n",
+    "\n",
     "\n"
    ]
   },
@@ -1467,30 +1484,35 @@
    "metadata": {},
    "source": [
     "### Cluster Lables\n",
-    "#### Cluster 0:\n",
-    "- Characteristics:\n",
-    "  - Negative values in total_hotel_usd_spent_scaled and total_flight_usd_spent_scaled: This indicates users in this cluster likely spend less on flights and hotels.\n",
-    "  - Negative prefers_flights_scaled, prefers_both_scaled: They do not prefer both or flights.\n",
-    "  - Positive prefers_hotels_scaled: They might lean more towards hotels, possibly indicating a preference for deals or offers involving hotels.\n",
-    "- Label: \"Free Hotel Meal Seekers\"\n",
+    "#### Cluster 0: \"Free Hotel Meal Seekers\"\n",
+    "- Strong Preference for Hotels: prefers_hotels_scaled is high.\n",
+    "- Lower Spending on Flights: Both total_flight_usd_spent_scaled and flight_discount_proportion_scaled are low.\n",
+    "- Discount Responsiveness: discount_responsiveness_scaled is slightly positive.\n",
+    "  Cluster 0 corresponds to \"Free Hotel Meal Seekers\" due to its strong preference for hotels and relatively low interest in flights.\n",
     "\n",
-    "#### Cluster 1:\n",
-    "Characteristics:\n",
-    "Positive average_checked_bags_scaled: Indicates users in this cluster are likely to check more bags.\n",
-    "Positive hotel_discount_proportion_scaled and average_hotel_discount_scaled: They are responsive to hotel discounts.\n",
-    "Label: \"Free Checked Bag Seekers\"\n",
+    "#### Cluster 1: \"Free Checked Bag Seekers\"\n",
+    "- Checked Bags: average_checked_bags_scaled is slightly positive.\n",
+    "- Moderate Spending: total_hotel_usd_spent_scaled and total_flight_usd_spent_scaled are slightly positive.\n",
+    "- Hotel Discounts: hotel_discount_proportion_scaled and average_hotel_discount_scaled are high.\n",
+    " Cluster 1 corresponds to \"Free Checked Bag Seekers,\" as this group shows interest in checked bags and hotel discounts.\n",
     "\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5c99528-7229-4d15-8440-8972a4759310",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
+    "#### Cluster 2: \"Exclusive Discounts Seekers\"\n",
+    "- High Flight Discount Proportion: flight_discount_proportion_scaled is positive.\n",
+    "- Negative Hotel Discount Indicators: hotel_discount_proportion_scaled and average_hotel_discount_scaled are negative.\n",
+    "- Strong Discount Responsiveness: discount_responsiveness_scaled is quite negative, indicating a focus on finding discounts.\n",
+    " Cluster 2 corresponds to \"Exclusive Discounts Seekers,\" as they seem highly focused on discounts.\n",
+    "\n",
+    "#### Cluster 3: \"No Cancellation Fee Seekers\"\n",
+    "- High Cancellation Rate: total_cancellation_rate_scaled is high.\n",
+    "- Strong Preference for Flights: prefers_flights_scaled is very high.\n",
+    "- Moderate Discount Responsiveness: discount_responsiveness_scaled is positive.\n",
+    " Cluster 3 corresponds to \"No Cancellation Fee Seekers,\" as they likely want flexibility with their bookings.\n",
+    "\n",
+    "#### Cluster 4: \"1 Night Free Hotel with Flight Seekers\"\n",
+    "- Both Discounts are Significant: both_discount_proportion_scaled is very high.\n",
+    "- Discount Responsiveness: discount_responsiveness_scaled is the highest among all clusters.\n",
+    "- Preference for Combined Offers: Both prefers_both_scaled and average_hotel_discount_scaled are positive.\n",
+    " Cluster 4 corresponds to \"1 Night Free Hotel with Flight Seekers,\" as they seem to focus on both flight and hotel discounts together."
    ]
   },
   {
@@ -1564,7 +1586,7 @@
        "      <td>0.552773</td>\n",
        "      <td>-0.249056</td>\n",
        "      <td>-0.326939</td>\n",
-       "      <td>1.913683</td>\n",
+       "      <td>1.913378</td>\n",
        "      <td>1</td>\n",
        "      <td>Free Checked Bag Seekers</td>\n",
        "    </tr>\n",
@@ -1588,7 +1610,7 @@
        "      <td>-0.086391</td>\n",
        "      <td>-0.593064</td>\n",
        "      <td>3.605521</td>\n",
-       "      <td>0.834547</td>\n",
+       "      <td>0.834305</td>\n",
        "      <td>3</td>\n",
        "      <td>No Cancellation Fee Seekers</td>\n",
        "    </tr>\n",
@@ -1612,7 +1634,7 @@
        "      <td>-0.519604</td>\n",
        "      <td>1.142815</td>\n",
        "      <td>-0.458573</td>\n",
-       "      <td>0.751537</td>\n",
+       "      <td>0.751299</td>\n",
        "      <td>2</td>\n",
        "      <td>Exclusive Discounts Seekers</td>\n",
        "    </tr>\n",
@@ -1636,7 +1658,7 @@
        "      <td>-0.141087</td>\n",
        "      <td>1.489991</td>\n",
        "      <td>0.712258</td>\n",
-       "      <td>0.087453</td>\n",
+       "      <td>0.087254</td>\n",
        "      <td>2</td>\n",
        "      <td>Exclusive Discounts Seekers</td>\n",
        "    </tr>\n",
@@ -1660,7 +1682,7 @@
        "      <td>0.367452</td>\n",
        "      <td>0.382069</td>\n",
        "      <td>10.869362</td>\n",
-       "      <td>0.253474</td>\n",
+       "      <td>0.253265</td>\n",
        "      <td>1</td>\n",
        "      <td>Free Checked Bag Seekers</td>\n",
        "    </tr>\n",
@@ -1706,11 +1728,11 @@
        "4                   0.367452                      0.382069   \n",
        "\n",
        "   total_flight_usd_spent_scaled  age_scaled  cluster  \\\n",
-       "0                      -0.326939    1.913683        1   \n",
-       "1                       3.605521    0.834547        3   \n",
-       "2                      -0.458573    0.751537        2   \n",
-       "3                       0.712258    0.087453        2   \n",
-       "4                      10.869362    0.253474        1   \n",
+       "0                      -0.326939    1.913378        1   \n",
+       "1                       3.605521    0.834305        3   \n",
+       "2                      -0.458573    0.751299        2   \n",
+       "3                       0.712258    0.087254        2   \n",
+       "4                      10.869362    0.253265        1   \n",
        "\n",
        "                 cluster_label  \n",
        "0     Free Checked Bag Seekers  \n",
@@ -1745,24 +1767,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d7e7bf30-9be6-499d-8f0a-53d7218e4c93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cluster_label\n",
-      "Exclusive Discounts Seekers               1788\n",
-      "Free Checked Bag Seekers                  1674\n",
-      "Free Hotel Meal Seekers                    959\n",
-      "1 Night Free Hotel with Flight Seekers     894\n",
-      "No Cancellation Fee Seekers                683\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cluster_counts = df['cluster_label'].value_counts()\n",
     "\n",
